ci: disable gcp stuff
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/.github/workflows/tutorial-tests.yml
+++ b/.github/workflows/tutorial-tests.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: "Execute test script"
         run: |
-          ./tutorial-cms.sh
+          ./tutorial-cmds.sh
 
 #      - name: "Delete VM instance"
 #        if: always()
