ci: disable gcp stuff
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/.github/workflows/tutorial-tests.yml
+++ b/.github/workflows/tutorial-tests.yml
@@ -72,6 +72,11 @@ jobs:
 #
 #          echo "::set-output name=VM_INSTANCE_NAME::$VM_INSTANCE_NAME"
 
+      - name: "Print script"
+        run: |
+          echo "Tutorial Script:"
+          echo ""
+          cat tutorial-cmds.sh
       - name: "Execute test script"
         run: |
           ./tutorial-cmds.sh
