--- a/bridge/angular.json
+++ b/bridge/angular.json
@@ -46,7 +46,7 @@
               "./node_modules/highlight.js/styles/default.css",
               "client/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
           },
           "configurations": {
             "production": {
