--- a/bridge/package.json
+++ b/bridge/package.json
@@ -54,6 +54,7 @@
     "@ngrx/router-store": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "@ngrx/store-devtools": "^11.1.1",
+    "apexcharts": "^3.29.0",
     "cypress-file-upload": "^5.0.8",
     "d3": "^7.0.1",
     "d3-scale": "^3.3.0",
@@ -65,6 +66,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^3.0.4",
     "moment": "^2.29.1",
+    "ng-apexcharts": "^1.5.12",
     "ngx-moment": "^3.5.0",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.6.7",
