--- a/bridge/package.json
+++ b/bridge/package.json
@@ -54,9 +54,12 @@
     "@ngrx/router-store": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "@ngrx/store-devtools": "^11.1.1",
+    "@types/d3": "^7.1.0",
     "apexcharts": "^3.29.0",
+    "chart.js": "^3.6.0",
+    "chartjs-chart-matrix": "^1.1.0",
     "cypress-file-upload": "^5.0.8",
-    "d3": "^7.0.1",
+    "d3": "^7.1.1",
     "d3-scale": "^3.3.0",
     "d3-shape": "^1.3.5",
     "dompurify": "^2.3.1",
