--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -428,6 +428,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -447,6 +450,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ${{ matrix.config.working-dir }}
+          platforms: linux/amd64,linux/arm64
           tags: |
             keptndev/${{ matrix.config.artifact }}:${{ env.VERSION }}
             keptndev/${{ matrix.config.artifact }}:${{ env.VERSION }}.${{ env.DATETIME }}
