--- a/mongodb-datastore/Dockerfile
+++ b/mongodb-datastore/Dockerfile
@@ -38,7 +38,7 @@ RUN sed -i "s/version: develop/version: ${version}/g" /go/src/github.com/keptn/k
 
 # Build the command inside the container.
 # (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
-RUN cd cmd/mongodb-datastore-server && GOOS=linux go build -ldflags '-linkmode=external' $BUILDFLAGS -v -o mongodb-datastore
+RUN cd cmd/mongodb-datastore-server && GOOS=linux go build -ldflags $BUILDFLAGS -v -o mongodb-datastore
 
 FROM alpine:3.16 as production
 ARG version=develop
