remove ldflags flag where its not used anymore
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/webhook-service/Dockerfile
+++ b/webhook-service/Dockerfile
@@ -35,7 +35,7 @@ ARG SKAFFOLD_GO_GCFLAGS
 
 # Build the command inside the container.
 # (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
-RUN GOOS=linux go build -ldflags -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v -o webhook-service
+RUN GOOS=linux go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v -o webhook-service
 
 # Use a Docker multi-stage build to create a lean production image.
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
