--- a/shipyard-controller/Dockerfile
+++ b/shipyard-controller/Dockerfile
@@ -49,7 +49,7 @@ RUN sed -i "s/version: develop/version: ${version}/g" docs/swagger.yaml
 # Build the command inside the container. 
 # (You may fetch or manage dependencies here, 
 # either manually or with a tool like "godep".)
-RUN GOOS=linux go build -ldflags -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
+RUN GOOS=linux go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
 
 # Use a Docker multi-stage build to create a lean production image.
 FROM alpine:3.16 as production
