--- a/resource-service/Dockerfile
+++ b/resource-service/Dockerfile
@@ -1,9 +1,8 @@
 # Use the official Golang image to create a build artifact.
 # This is based on Debian and sets the GOPATH to /go.
-FROM golang:1.18.4-alpine3.16 as builder-base
+FROM --platform=$BUILDPLATFORM golang:1.18.4-alpine3.16 as builder-base
 
-# install additional dependencies
-RUN apk add --no-cache gcc libc-dev git
+RUN apk add --no-cache gcc libc-dev
 
 # Force the go compiler to use modules
 ENV GO111MODULE=on
@@ -15,14 +14,11 @@ RUN go install github.com/swaggo/swag/cmd/swag@v1.7.0
 
 WORKDIR /go/src/github.com/keptn/keptn/resource-service
 
-# Copy `go.mod` for definitions and `go.sum` to invalidate the next layer
-# in case of a change in the dependencies
 COPY go.mod go.sum ./
 
 # Download dependencies
 RUN go mod download
 
-# Copy local code to the container image.
 COPY . .
 
 FROM builder-base as builder-test
@@ -38,20 +34,18 @@ ARG version=develop
 ARG SKAFFOLD_GO_GCFLAGS
 
 # generate swagger docs
-RUN GOOS=linux swag init
+RUN GOOS=$TARGETOS swag init
 
 # replace github.com/alecthomas/template; with text/template in docs/docs.go
 RUN sed -i "s|github.com/alecthomas/template|text/template|g" docs/docs.go
 # replace version "develop" with actual version
 RUN sed -i "s/version: develop/version: ${version}/g" docs/swagger.yaml
 
-# Build the command inside the container. 
-# (You may fetch or manage dependencies here, 
-# either manually or with a tool like "godep".)
-RUN GOOS=linux go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
+# Build the command inside the container.
+# (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
+RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
 
-# Use a Docker multi-stage build to create a lean production image.
-FROM alpine:3.16 as production
+FROM --platform=$BUILDPLATFORM alpine:3.16 as production
 ARG version=develop
 LABEL org.opencontainers.image.source="https://github.com/keptn/keptn" \
     org.opencontainers.image.url="https://keptn.sh" \
