--- a/approval-service/Dockerfile
+++ b/approval-service/Dockerfile
@@ -1,6 +1,6 @@
 # Use the official Golang image to create a build artifact.
 # This is based on Debian and sets the GOPATH to /go.
-FROM golang:1.18.4-alpine3.16 as builder-base
+FROM --platform=$BUILDPLATFORM golang:1.18.4-alpine3.16 as builder-base
 
 WORKDIR /go/src/github.com/keptn/keptn/approval-service
 
@@ -31,14 +31,18 @@ FROM builder-base as builder
 ARG version=develop
 ARG debugBuild
 
+# Target OS and architecture to build against (set automatically)
+ARG TARGETOS
+ARG TARGETARCH
+
 # set buildflags for debug build
 RUN if [ ! -z "$debugBuild" ]; then export BUILDFLAGS='-gcflags "all=-N -l"'; fi
 
 # Build the command inside the container.
 # (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
-RUN GOOS=linux go build -ldflags $BUILDFLAGS -v -o approval-service
+RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags $BUILDFLAGS -v -o approval-service
 
-FROM alpine:3.16 as production
+FROM --platform=$BUILDPLATFORM alpine:3.16 as production
 ARG version=develop
 LABEL org.opencontainers.image.source="https://github.com/keptn/keptn" \
     org.opencontainers.image.url="https://keptn.sh" \
