--- a/bridge/Dockerfile
+++ b/bridge/Dockerfile
@@ -17,7 +17,7 @@ CMD yarn prettier:check && yarn lint:check
 FROM builder-test-base as builder-test-unit
 CMD yarn test && mv ./coverage/ /shared/coverage
 
-FROM node:14-alpine3.15 as builder-base
+FROM --platform=$BUILDPLATFORM node:14-alpine3.15 as builder-base
 
 ARG version=develop
 ENV VERSION="${version}"
@@ -57,7 +57,7 @@ RUN yarn build && \
 
 # Use a Docker multi-stage build to create a lean production image.
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
-FROM node:14-alpine3.15 as production
+FROM --platform=$BUILDPLATFORM node:14-alpine3.15 as production
 ARG version=develop
 LABEL org.opencontainers.image.source="https://github.com/keptn/keptn" \
     org.opencontainers.image.url="https://keptn.sh" \
