add back external linkmode to make all go binaries dynamically linked
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/lighthouse-service/Dockerfile
+++ b/lighthouse-service/Dockerfile
@@ -33,7 +33,7 @@ ARG TARGETARCH
 
 # Build the command inside the container.
 # (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
-RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v -o lighthouse-service
+RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags '-linkmode=external' -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v -o lighthouse-service
 
 FROM --platform=$BUILDPLATFORM alpine:3.16 as production
 ARG version=develop
