--- a/webhook-service/Dockerfile
+++ b/webhook-service/Dockerfile
@@ -11,7 +11,6 @@ RUN apk add --no-cache gcc libc-dev
 
 COPY go.mod go.sum ./
 
-# Download dependencies
 RUN go mod download
 
 COPY . .
@@ -33,7 +32,7 @@ ARG TARGETARCH
 
 # Build the command inside the container.
 # (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
-RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v -o webhook-service
+RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags '-linkmode=external' -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v -o webhook-service
 
 FROM --platform=$BUILDPLATFORM alpine:3.16 as production
 ARG version=develop
