--- a/statistics-service/Dockerfile
+++ b/statistics-service/Dockerfile
@@ -48,7 +48,7 @@ RUN sed -i "s/version: develop/version: ${version}/g" docs/swagger.yaml
 # (You may fetch or manage dependencies here, either manually or with a tool like "godep".)
 RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags '-linkmode=external' -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
 
-FROM --platform=$BUILDPLATFORM alpine:3.16 as production
+FROM alpine:3.16 as production
 ARG version=develop
 LABEL org.opencontainers.image.source="https://github.com/keptn/keptn" \
     org.opencontainers.image.url="https://keptn.sh" \
