--- a/resource-service/Dockerfile
+++ b/resource-service/Dockerfile
@@ -33,9 +33,13 @@ ARG SKAFFOLD_GO_GCFLAGS
 # Target OS and architecture to build against (set automatically)
 ARG TARGETOS
 ARG TARGETARCH
+ENV GOOS=$TARGETOS
+ENV GOARCH=$TARGETARCH
+
+RUN if [ "$GOARCH" == *'amd64'* ]; then export LINKERFLAGS="-ldflags '-linkmode=external'"; fi
 
 # generate swagger docs
-RUN GOOS=$TARGETOS GOARCH=$TARGETARCH swag init
+RUN swag init
 
 # replace github.com/alecthomas/template; with text/template in docs/docs.go
 RUN sed -i "s|github.com/alecthomas/template|text/template|g" docs/docs.go
@@ -43,7 +47,7 @@ RUN sed -i "s|github.com/alecthomas/template|text/template|g" docs/docs.go
 RUN sed -i "s/version: develop/version: ${version}/g" docs/swagger.yaml
 RUN sed -i "s|basePath: /v1|basePath: /api/resource-service/v1 |g" /go/src/github.com/keptn/keptn/resource-service/docs/swagger.yaml
 
-RUN GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags '-linkmode=external' -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
+RUN go build $LINKERFLAGS -gcflags="${SKAFFOLD_GO_GCFLAGS}" -v main.go
 
 FROM alpine:3.16 as production
 ARG version=develop
