remove more unneeded git packages, remove fail-fast matrix strategy
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/jmeter-service/Dockerfile
+++ b/jmeter-service/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /go/src/github.com/keptn/keptn/jmeter-service
 ENV BUILDFLAGS=""
 ENV GOPROXY=https://proxy.golang.org
 
-RUN apk add --no-cache gcc libc-dev git
+RUN apk add --no-cache gcc libc-dev
 
 # Copy `go.mod` for definitions and `go.sum` to invalidate the next layer
 # in case of a change in the dependencies
