remove timeout from bridge installation steps
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/bridge/Dockerfile
+++ b/bridge/Dockerfile
@@ -1,14 +1,14 @@
 FROM cypress/browsers:node14.17.6-chrome100-ff98 as builder-test-ui
 WORKDIR /usr/src/app
 COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile --network-timeout 600000
+RUN yarn install --frozen-lockfile
 COPY ./ ./
 CMD ./cypress/run-tests.sh
 
 FROM node:14-alpine3.15 as builder-test-base
 WORKDIR /usr/src/app
 COPY package.json yarn.lock /usr/src/app/
-RUN yarn install --frozen-lockfile --network-timeout 600000
+RUN yarn install --frozen-lockfile
 COPY . /usr/src/app
 
 FROM builder-test-base as builder-code-style
@@ -27,7 +27,7 @@ WORKDIR /usr/src/app
 
 # copy package.json only to install angular dependencies first
 COPY package.json yarn.lock /usr/src/app/
-RUN yarn install --frozen-lockfile --network-timeout 600000
+RUN yarn install --frozen-lockfile
 COPY . /usr/src/app
 
 FROM builder-base as bridge-builder
@@ -43,7 +43,7 @@ WORKDIR /usr/src/app/server
 
 # copy package.json only to install dependencies first
 COPY ./server/package.json ./server/yarn.lock ./
-RUN yarn install --frozen-lockfile --network-timeout 600000
+RUN yarn install --frozen-lockfile
 COPY ./server ./
 COPY ./shared /usr/src/app/shared
 
@@ -53,7 +53,7 @@ CMD yarn test && \
 
 FROM bridge-server-builder-base as bridge-server-builder
 RUN yarn build && \
-  yarn install --frozen-lockfile --production --network-timeout 600000
+  yarn install --frozen-lockfile --production
 
 # Use a Docker multi-stage build to create a lean production image.
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
